# translation-KG

./: .gitignore  Dockerfile  README.md  WARP.md  document.md  main.py  pyproject.toml  requirements.txt  structure.md  test.py
api/: cors.py  main.py
api/models/: models.py  translate.py
api/routers/: graph.py  keywords.py  related_terms.py  translate.py  upload_pdf.py
scripts/: build_graph.py  csv_filter.py  export_graph.py
templates/: pdf_view.html
tests/: csv_check.py  translate.py
tests/notebooks/: jsonl_check.py
tools/: graph_query.py  load_graph.py  parser.py  translate.py  translate_llm.py
utils/: detect_lang.py
