[project]
name = "translation-kg"
version = "0.1.0"
description = ""
authors = [
    {name = "Morris"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "spacy (>=3.8.6,<4.0.0)",
    "opencc (>=1.1.9,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
